subiendo proyecto tiendita

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.title{
+  @apply text-3xl md:text-5xl text-center font-bold my-10
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.btn{
+  @apply bg-amber-600 hover:bg-amber-500 hover:tracking-wider rounded-sm text-white uppercase p-1 w-3/5 mx-auto transition-all 
+}
+.btn-modal{
+  @apply bg-amber-600 hover:bg-amber-500 hover:tracking-wider rounded-sm text-white uppercase p-1 w-4/5 mx-auto transition-all 
+}
+.btn-sm{
+  @apply bg-indigo-500 hover:bg-indigo-400 rounded-sm text-white capitalize p-1 w-2/3 xl:w-3/5 mx-auto text-lg my-4 transition-all 
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.grilla{
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(280px, 1fr) );
+  gap: 2rem;
+}
+
+.contenedor{
+  @apply container w-11/12 mx-auto pb-10
 }
